# libdispatch

./: .clang-format  .gitmodules  .travis.yml  Android.mk  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  Readme.md  build_libdispatch.sh  configure  configure.ac
android/config/: config.h
cmake/: BuildUtil.cmake  DSTargetAppendCompilerFlags.cmake  DSTargetAppendLinkerFlags.cmake  FindBlocksRuntime.cmake  Findkqueue.cmake
config/: config.h.cmake.in
dispatch/: CMakeLists.txt  data.h  io.h  queue.h  source.h
man/: CMakeLists.txt  create_man_symlinks.cmake
os/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  benchmark.c  data.c  data_additions.c  init.c  internal.h  io.c  io_additions.c  queue.c  semaphore.c  shims.h  source.c  time.c  transform.c
src/shims/: getprogname.h  pthread_main_np.h  strlcpy.h  valloc.h
testing/: CMakeLists.txt  Makefile.am  bsdtestharness.c  bsdtests.c  dispatch_apply.c  dispatch_concur.c  dispatch_data.c  dispatch_io.c  dispatch_io_net.c  dispatch_main_queue.c  dispatch_np.c  dispatch_pingpong.c  dispatch_priority.c  dispatch_proc.c  dispatch_read2.c  dispatch_readsync.c  dispatch_run.sh  dispatch_sema.c  dispatch_test.c  dispatch_vm.c  dispatch_vnode.c  min.h  run_tests.py
testing/shims/: hw_config.h  time.h
